# DownloadThis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  USAGE_GUIDE.md  downloadthis_mockup_vintage.html  downloadthis_modern.py  downloadthis_modern.spec  pyproject.toml  requirements.txt
.github/workflows/: build-packages.yml  tests.yml
packaging/: build-all.sh  build-appimage.sh  build-deb.sh  build-flatpak.sh  build-portableapp.sh  build-rpm.sh  build-snap.sh
packaging/linux/: AppImageBuilder.yml  AppRun  dev.d4vram.downloadthis.appdata.xml  dev.d4vram.downloadthis.desktop  dev.d4vram.downloadthis.yaml  downloadthis.spec  launcher.sh  snapcraft.yaml
packaging/linux/debian/: changelog  control  postinst  prerm  rules
packaging/windows/: installer.nsi  installer.wxs  portableapp.bat  portableapp.sh
tests/: test_core.py
