[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "downloadthis"
version = "2.0.0"
description = "GUI para yt-dlp con diseño vintage XP Luna P2P"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "ttkbootstrap>=1.10",
    "tkinterdnd2>=0.3",
    "yt-dlp>=2024.1",
]

[project.scripts]
downloadthis = "downloadthis_modern:main"

[tool.setuptools]
py-modules = ["downloadthis_modern"]
