[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "downloadthis"
version = "1.0.0"
description = "Local-first audio downloader GUI for yt-dlp with a vintage XP/P2P interface"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "D4vRAM", email = "d4vram369@github.com" },
]
keywords = [
    "yt-dlp",
    "youtube-downloader",
    "audio-downloader",
    "soundcloud-downloader",
    "tkinter",
    "gui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "ttkbootstrap>=1.10",
    "tkinterdnd2>=0.3",
    "yt-dlp>=2024.1",
]

[project.urls]
Homepage = "https://github.com/D4vRAM369/downloadthis"
Repository = "https://github.com/D4vRAM369/downloadthis"
Issues = "https://github.com/D4vRAM369/downloadthis/issues"

[project.scripts]
downloadthis = "downloadthis_modern:main"

[tool.setuptools]
py-modules = ["downloadthis_modern"]
